app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: sixtinetvs/virt-proj-api-gateway:1
        imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cotation
  template:
    metadata:
      labels:
        app: cotation
    spec:
      containers:
        - name: cotation-service-container
          image: sixtinetvs/virt-proj-cotation-service:1
          imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front-container
          image: sixtinetvs/virt-proj-front:latest
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  ports:
    - name: http
      targetPort: 9090
      port: 80
  type: NodePort
  selector:
    app: api-gateway
---

apiVersion: v1
kind: Service
metadata:
  name: cotation-service
spec:
  ports:
    - name: http
      targetPort: 8081
      port: 80
  type: ClusterIP
  selector:
    app: cotation
---

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  type: NodePort
  selector:
    app: front
---

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: api-gateway-ingress
#  annotations:
#    kubernetes.io/ingress.class: traefik
#spec:
#  rules:
#    - host: api-gateway.localhost
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: api-gateway-service
#              servicePort: http
