ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 80
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: kube-system
spec:
  type: ExternalName
  externalName: api-gateway-service.default.svc.cluster.local
